--- a/clientBlogs/src/pages/css/Home.css
+++ b/clientBlogs/src/pages/css/Home.css
@@ -18,6 +18,7 @@
 }
 
 
+
 .carouselSection {
     min-height: 100vh;
     width: 42%;
@@ -27,7 +28,7 @@
     align-items: center;
 }
 
-.carouselSection .carouselContentContainer {
+ .carouselContentContainer {
     display: flex;
     width: 95%;
     margin: 15px 0px;
@@ -38,20 +39,49 @@
     border-radius: 30px;
     text-transform: none;
     font-size: 23px;
-    min-width: 80px;
+    min-width: 72.6px;
+    height: 43.73px;
     border: 0.83px solid rgba(71, 71, 71, 1);
+
+
+    
+
+    font-family: 'Roboto';
+    font-style: normal;
+    
+    font-size: 23.1px;
+    line-height: 27px;
+    color: #FFFFFF;
 
     &:hover {
         background-color: #5f5f5f;
+        
     }
 }
 
-.carouselSection .carouselDisplayText {
+ .carouselDisplayText {
     padding: 20px 0px;
     color: rgba(177, 177, 177, 1);
     width: 100%;
     margin: 0px auto;
     font-size: 24px;
+
+
+   
+
+    font-family: 'Questrial';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 36px;
+    /* or 150% */
+    letter-spacing: 0.05em;
+
+    color: #B1B1B1;
+
+    
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
 }
 
 .whoAreWeContainer {
@@ -69,16 +99,35 @@
 }
 
 .whoAreWeContainer .contentPanel>h2 {
-    font-size: 45px;
-    font-weight: 100;
-    color: #F74D79;
+ 
     margin-bottom: 20px;
     width: 100%;
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 200;
+    font-size: 36px;
+    line-height: 36px;
+    text-align: justify;
+    letter-spacing: 0.05em;
+
+    color: #F74D79;
+
+
 }
 
 .whoAreWeContainer .contentPanel>detail {
-    font-size: 25px;
-    color: #FFFFFF;
+
+        font-family: 'Questrial';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 32px;
+      
+        letter-spacing: 0.05em;
+
+        color: #FFFFFF;
+
 }
 
 .whoAreWeContainer .imagePanel {
@@ -99,15 +148,26 @@
 }
 
 .welcomeSection>h2 {
-    font-size: 48px;
-    font-weight: 100;
-    text-align: center;
-    color: rgba(247, 77, 121, 1);
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 200;
+font-size: 48px;
+line-height: 59px;
+text-align: center;
+letter-spacing: 0.05em;
+color: #F74D79;
+
 }
 
 .welcomeSection>detail {
-    font-size: 20px;
-    font-weight: 400;
-    text-align: center;
-    color: #FFFFFF;
+font-family: 'Questrial';
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 32px;
+text-align: center;
+letter-spacing: 0.05em;
+color: #FFFFFF;
+
+
 }
