--- a/clientBlogs/src/pages/css/Blogs.css
+++ b/clientBlogs/src/pages/css/Blogs.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+
 .mainContainer {
     max-width: 80%;
     margin: 0px auto;
@@ -22,4 +24,17 @@
     min-height: 435px;
     height: auto;
     flex-wrap: wrap;
+}
+
+.blogIntro{
+    font-family: 'Questrial';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14.25px;
+    line-height: 15px;
+    color: #ABABAB;
+    margin: auto;
+    padding: 10px;
+    text-align: center;
+    padding-bottom: 100px;
 }
