FEAT: adding comment area

--- a/clientBlogs/src/pages/css/IndividualBlogs.css
+++ b/clientBlogs/src/pages/css/IndividualBlogs.css
@@ -171,6 +171,12 @@
     gap: 10px;
 }
 
+.commentBox {
+    margin: 0px 5%;
+    padding: 25px 0px;
+    width: 90%;
+}
+
 .relatedBlogsSection {
     display: flex;
     justify-content: space-between;
