--- a/clientBlogs/src/pages/css/IndividualBlogs.css
+++ b/clientBlogs/src/pages/css/IndividualBlogs.css
@@ -172,8 +172,8 @@
 }
 
 .commentBox {
-    margin: 0px 5%;
-    padding: 25px 0px;
+    margin: 0px auto;
+    padding: 0px 0px;
     width: 90%;
 }
 
