--- a/clientBlogs/src/components/css/CommentCard.css
+++ b/clientBlogs/src/components/css/CommentCard.css
@@ -128,14 +128,14 @@
 
 
 
-.container {
+/* .container {
     margin: 0px auto;
     width: 64.26%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-end;
-}
+} */
 
 .replyBox {
     width: 90%;
