--- a/clientBlogs/src/components/css/Footer.css
+++ b/clientBlogs/src/components/css/Footer.css
@@ -2,6 +2,7 @@
     padding-top: 3rem;
     padding-left: 7rem;
     border-top: 3px solid white;
+    display: none !important;
 }
 
 .footerContainer .row2 {
@@ -90,4 +91,3 @@
 .contact{
     width: 40%;
 }
-
