--- a/clientBlogs/src/pages/css/Connect.css
+++ b/clientBlogs/src/pages/css/Connect.css
@@ -633,7 +633,7 @@
     .frame68 {
   
         gap: 5px;
-        margin-left: -10px;
+        margin-left: -20px;
         height: 14px;
         margin-top: 25px;
         width: 40hw;
@@ -641,7 +641,7 @@
     }
     
     .line {
-        width: 5hw;
+        width: 80px;
         height: 0.5px;
     }
     
