--- a/clientBlogs/src/pages/css/Blogs.css
+++ b/clientBlogs/src/pages/css/Blogs.css
@@ -3,13 +3,13 @@
 .mainContainer {
     max-width: 80%;
     margin: 0px auto;
-  
+
 }
 
 .tabsContainer {
     background-color: rgba(35, 36, 38, 1);
     border-bottom: 1px solid white;
-    
+
 }
 
 .tabsContainer .tabs {
@@ -17,6 +17,11 @@
     text-transform: none;
     margin-left: 20px;
     margin-right: 20px;
+}
+
+.blogCardContainer {
+    margin: 0px 10%;
+
 }
 
 .blogCard {
@@ -32,19 +37,32 @@
 
 @media only screen and (min-width:2560px) {
     .mainContainer {
-        max-width:1300px;
+        max-width: 1300px;
     }
 
 
 }
-@media only screen and (max-width:1025px) {
-   
 
+@media only screen and (max-width:1025px) {}
 
-}
 @media only screen and (max-width:800px) {
     .tabsContainer .tabs {
         font-size: 1.1rem;
+    }
+
+    .blogCardContainer {
+        margin: 0px 2.5%;
+
+    }
+
+    .blogCard {
+        max-width: 300px;
+        width: 300px;
+        min-width: 300px;
+        margin: 3rem 2rem;
+        min-height: 435px;
+        height: auto;
+        flex-wrap: wrap;
     }
 
 
@@ -53,5 +71,9 @@
 @media only screen and (max-width:430px) {
     .tabsContainer .tabs {
         font-size: 1rem;
+    }
+
+    .blogCardContainer {
+        margin: 0px 7%;
     }
 }
